cluster/network-policies/argocd-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-netpol
  namespace: argocd
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}   # allow all ingress (UI on NodePort 30080)
  egress:
    - {}   # allow ArgoCD to reach GitHub, Helm repos, and all namespaces
