cluster/network-policies/monitoring-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-netpol
  namespace: monitoring
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}   # allow all ingress (Grafana UI + Prometheus API)
  egress:
    - {}   # allow Prometheus to scrape all namespaces
